// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SquareAppIcon component should render an app correctly with the app name 1`] = `
<div
  class="makeStyles-tileWrapper-11"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            color="var(--coolGrey)"
            data-icon="true"
            height="100%"
            width="100%"
          />
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-7 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render an app correctly with the given name 1`] = `
<div
  class="makeStyles-tileWrapper-5"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            color="var(--coolGrey)"
            data-icon="true"
            height="100%"
            width="100%"
          />
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-1 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    modified
  </h6>
</div>
`;

exports[`SquareAppIcon component should render an app with the app slug if no name prop and app is a string 1`] = `
<div
  class="makeStyles-tileWrapper-17"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            color="var(--coolGrey)"
            data-icon="true"
            height="100%"
            width="100%"
          />
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-13 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    testslug
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in add state 1`] = `
<div
  class="makeStyles-tileWrapper-41"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <svg
          color="var(--primaryColor)"
          data-icon="true"
        />
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-37 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  />
</div>
`;

exports[`SquareAppIcon component should render correctly an app in error state 1`] = `
<div
  class="makeStyles-tileWrapper-35"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            color="var(--coolGrey)"
            data-icon="true"
            height="100%"
            width="100%"
          />
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular MuiBadge-colorError"
      >
        <svg
          class="makeStyles-errorIcon-34"
          data-icon="true"
          size="16"
        />
      </span>
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-31 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in ghost state 1`] = `
<div
  class="makeStyles-tileWrapper-29"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper-ghost___2kj_s styles__SquareAppIcon-wrapper--light___AqjR- makeStyles-squareAppIconGhost-26"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            color="var(--coolGrey)"
            data-icon="true"
            height="100%"
            width="100%"
          />
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-25 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in maintenance state 1`] = `
<div
  class="makeStyles-tileWrapper-23"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper-maintenance___1svWY styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            color="var(--coolGrey)"
            data-icon="true"
            height="100%"
            width="100%"
          />
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-19 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in shortcut state 1`] = `
<div
  class="makeStyles-tileWrapper-47"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
      style="background: palegreen;"
    >
      <h2
        class="MuiTypography-root makeStyles-letter-45 MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
      >
        S
      </h2>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular"
    >
      <div
        class="u-h-1-half u-miw-1-half u-bdrs-circle u-flex u-flex-items-center u-flex-justify-center"
        style="background-color: var(--paperBackgroundColor); color: var(--iconTextColor); box-shadow: var(--shadow3);"
      >
        <svg
          data-icon="true"
          size="10"
        />
      </div>
    </span>
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-43 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    shortcut
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app with custom content 1`] = `
<div
  class="makeStyles-tileWrapper-59"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <svg
          data-icon="true"
        />
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-55 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    custom icon
  </h6>
</div>
`;
